--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
     </div>
     <div class="album py-5 bg-body-tertiary">
-        <div class="container">
-    
+      <h1 class="text-center">My Projects</h1>
+        <div class="container py-5">
           <div class="row row-cols-1 row-cols-sm-2 g-3">
             <div class="col">
               <div class="card shadow-sm">
@@ -82,5 +82,39 @@
           </div>
         </div>
     </div>
+    <div class="p-5 text-center bg-body-tertiary">
+      <div class="container">
+        <h1 class="text-body-emphasis">About Me</h1>
+        <p class="col-lg-8 mx-auto lead">
+          I am a Frontend Developer and Web Designer working mainly on Wordpress, ReactJS, and NextJS. I can also demonstrate proficiency in leadership, collaboration, communication, and work time.
+        </p>
+        <p class="col-lg-8 mx-auto lead fw-bold">
+          Have a look at my <a href="https://dinhanh-nguyen.github.io/Online-Resume/" target="_blank" class="underline">resume</a>
+        </p>
+      </div>
+    </div>
+    <div class="p-5 text-center bg-body-tertiary">
+      <div class="container py-5">
+        <h1 class="text-body-emphasis">Connect With Me</h1>
+        <p class="col-lg-8 mx-auto lead">
+          Do you want to get in touch and build great products together? Do you need a caring, energetic, but also disciplined member to help level up your workplace? If so, let's get in touch with each other!
+        </p>
+        <a class="btn btn-outline-dark" href="mailto:dinhanhnguyen.work@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center px-5 py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Daniel Nguyen</span>
+      </div>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-body-secondary" href="https://github.com/DinhAnh-Nguyen"  target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+          <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+        </svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.linkedin.com/in/dinhanh-nguyen/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+          <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+        </svg></a></li>
+      </ul>
+    </footer>
 </body>
 </html>
