--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Nguyen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="./SAIT-7051.jpg" class="d-block mx-lg-auto img-fluid rounded-pill" alt="profile picture" width="350" height="300" loading="lazy">
+            <img src="./images/SAIT-7051.jpg" class="d-block mx-lg-auto img-fluid rounded-pill" alt="profile picture" width="350" height="300" loading="lazy">
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hello, I'm Daniel</h1>
@@ -25,7 +24,7 @@
           <div class="row row-cols-1 row-cols-sm-2 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img src="./HealthyYYC.png" alt="healthy yyc">
+                <img src="./images/HealthyYYC.png" alt="healthy yyc">
                 <div class="card-body">
                     <h4>Healthy YYC</h4>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -39,7 +38,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="./HealthyYYC.png" alt="healthy yyc">
+                <img src="./images/HealthyYYC.png" alt="healthy yyc">
                 <div class="card-body">
                     <h4>Healthy YYC</h4>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -53,7 +52,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="./HealthyYYC.png" alt="healthy yyc">
+                <img src="./images/HealthyYYC.png" alt="healthy yyc">
                 <div class="card-body">
                     <h4>Healthy YYC</h4>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -67,7 +66,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="./HealthyYYC.png" alt="healthy yyc">
+                <img src="./images/HealthyYYC.png" alt="healthy yyc">
                 <div class="card-body">
                     <h4>Healthy YYC</h4>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
